vcl/unx/generic/print/genprnpsp.cxx
@@ -569,6 +569,10 @@ bool PspSalInfoPrinter::SetData(
         const PPDKey* pKey;
         const PPDValue* pValue;
 
+        // merge orientation if necessary
+        if( nSetDataFlags & JobSetFlags::ORIENTATION )
+            aData.m_eOrientation = pJobSetup->GetOrientation() == Orientation::Landscape ? orientation::Landscape : orientation::Portrait;
+
         // merge papersize if necessary
         if( nSetDataFlags & JobSetFlags::PAPERSIZE )
         {
@@ -577,7 +581,8 @@ bool PspSalInfoPrinter::SetData(
             if( pJobSetup->GetPaperFormat() == PAPER_USER )
                 aPaper = aData.m_pParser->matchPaper(
                     TenMuToPt( pJobSetup->GetPaperWidth() ),
-                    TenMuToPt( pJobSetup->GetPaperHeight() ) );
+                    TenMuToPt( pJobSetup->GetPaperHeight() ),
+                    &aData.m_eOrientation );
             else
                 aPaper = OStringToOUString(PaperInfo::toPSName(pJobSetup->GetPaperFormat()), RTL_TEXTENCODING_ISO_8859_1);
 
@@ -591,7 +596,8 @@ bool PspSalInfoPrinter::SetData(
                 PaperInfo aInfo( pJobSetup->GetPaperFormat() );
                 aPaper = aData.m_pParser->matchPaper(
                     TenMuToPt( aInfo.getWidth() ),
-                    TenMuToPt( aInfo.getHeight() ) );
+                    TenMuToPt( aInfo.getHeight() ),
+                    &aData.m_eOrientation );
                 pValue = pKey->getValueCaseInsensitive( aPaper );
             }
 
@@ -618,10 +624,6 @@ bool PspSalInfoPrinter::SetData(
             // if printer has no InputSlot key simply ignore this setting
             // (e.g. SGENPRT has no InputSlot)
         }
-
-        // merge orientation if necessary
-        if( nSetDataFlags & JobSetFlags::ORIENTATION )
-            aData.m_eOrientation = pJobSetup->GetOrientation() == Orientation::Landscape ? orientation::Landscape : orientation::Portrait;
 
         // merge duplex if necessary
         if( nSetDataFlags & JobSetFlags::DUPLEXMODE )
